--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -294,6 +294,17 @@
   }
 }
 
+@mixin hiddenChipBlockArrow() {
+  position: absolute;
+  z-index: -10;
+  display: block;
+  width: 12px;
+  height: 12px;
+  background-color: $white;
+  transform: rotate(-45deg);
+  content: '';
+}
+
 @mixin tableColumn($flex) {
   &_container {
     display: flex;
